User fetching in datasource changed to interface{} GET /user done
