# app/controller/controller.go
@@ -1,13 +1,15 @@
+// TODO ------
+// - CreateUser
+// - DeleteUserById
+// - UpdateUserById
 package controller
 
 import (
-	"fmt"
 	"net/http"
-	"strconv"
 
 	"github.com/yeyee2901/sqlx/app/config"
 	"github.com/yeyee2901/sqlx/app/datasource"
-	"github.com/yeyee2901/sqlx/app/entity"
+	"github.com/yeyee2901/sqlx/app/user"
 
 	"github.com/gin-gonic/gin"
 	"github.com/jmoiron/sqlx"
@@ -41,95 +43,34 @@ func (T *Controller) InitRouting() {
 // @Summary mengambil data-data user
 // @Router /user [get]
 // @Param id query int false "Jika tidak memasukkan user ID maka akan get semua"
-// @Success 200 {object} entity.GetUsersResp
+// @Success 200 {object} user.GetUserResp
 func (T *Controller) GetUser(ctx *gin.Context) {
 	ds := datasource.NewDatasource(T.Config, T.DB)
+	userService := user.NewUserService(ds)
 
 	// cek query string
 	id := ctx.Query("id")
 
-	// case user tidak masukin id
-	// maka get all user
-	if len(id) == 0 {
-		users, err := ds.GetAllUsers()
-		if err != nil {
-			resp := entity.Response{
-				Msg: err.Error(),
-			}
-			ctx.AbortWithStatusJSON(http.StatusInternalServerError, resp)
-			return
-		}
-		resp := entity.GetUsersResp{
-			Total: len(users),
-			Users: users,
-		}
+	users, errResp := userService.GetUser(ctx, id)
 
-		// send to client
-		ctx.JSON(http.StatusOK, resp)
+	if errResp.HttpStatus != http.StatusOK {
+		ctx.AbortWithStatusJSON(errResp.HttpStatus, errResp.Details)
 		return
 	}
 
-	// kasus lain ketika user memasukkan id,
-	// maka ambil yang id nya sesuai saja
-	user, err := ds.GetUserById(id)
-	if err != nil {
-		resp := entity.GetUsersResp{
-			Total: 0,
-			Users: []datasource.User{},
-		}
-		ctx.AbortWithStatusJSON(http.StatusOK, resp)
-		return
-	}
-
-	// untuk menyamakan respon saja, biar simetris
-	// tapi len nya pasti 1 kalau memasukkan id
-	var users []datasource.User
-	users = append(users, user)
-	resp := entity.GetUsersResp{
-		Total: len(users),
-		Users: users,
-	}
-
-	// send to client
-	ctx.JSON(http.StatusOK, resp)
-	return
+	ctx.JSON(http.StatusOK, users)
 }
 
 // CreateUser godoc
 // @Tags User
 // @Summary Membuat user baru
 // @Router /user [post]
-// @Param request body datasource.CreateUserReq true "request body JSON"
+// @Param request body user.CreateUserReq true "request body JSON"
 // @Success 200 {object} entity.Response
 func (T *Controller) CreateUser(ctx *gin.Context) {
-	ds := datasource.NewDatasource(T.Config, T.DB)
-	// binding ke model
-	var req datasource.CreateUserReq
-	err := ctx.ShouldBindJSON(&req)
-
-	if err != nil {
-		resp := entity.Response{
-			Msg: err.Error(),
-		}
-		ctx.AbortWithStatusJSON(http.StatusBadRequest, resp)
-		return
-	}
-
-	userId, err := ds.CreateUser(&req)
-	if err != nil {
-		resp := entity.Response{
-			Msg: err.Error(),
-		}
-		ctx.AbortWithStatusJSON(http.StatusInternalServerError, resp)
-		return
-	}
-
-	resp := entity.CreateUserResp{
-		Id:   userId,
-		Name: req.Name,
-	}
-	ctx.JSON(http.StatusOK, resp)
-	return
+	ctx.JSON(http.StatusOK, gin.H{
+		"msg": "in progress",
+	})
 }
 
 // DeleteUserById godoc
@@ -139,67 +80,19 @@ func (T *Controller) CreateUser(ctx *gin.Context) {
 // @Param id path int true "User ID (angka positif)"
 // @Success 200 {object} entity.Response
 func (T *Controller) DeleteUserById(ctx *gin.Context) {
-	ds := datasource.NewDatasource(T.Config, T.DB)
-
-	idStr := ctx.Param("id")
-	idInt, err := strconv.Atoi(idStr)
-	if err != nil {
-		resp := entity.Response{
-			Msg: err.Error(),
-		}
-		ctx.AbortWithStatusJSON(http.StatusBadRequest, resp)
-		return
-	}
-
-	rowsAffected, err := ds.DeleteUserById(idInt)
-	if err != nil {
-		resp := entity.Response{
-			Msg: err.Error(),
-		}
-		ctx.AbortWithStatusJSON(http.StatusInternalServerError, resp)
-		return
-	}
-
-	resp := entity.Response{
-		Msg: fmt.Sprintf("Sukses. %d rows affected.", rowsAffected),
-	}
-
-	ctx.JSON(http.StatusOK, resp)
-	return
+	ctx.JSON(http.StatusOK, gin.H{
+		"msg": "in progress",
+	})
 }
 
 // UpdateUserById godoc
 // @Tags User
 // @Summary mengubah data user berdasarkan ID
 // @Router /user [put]
-// @Param request body datasource.UpdateUserByIdReq true "User ID (angka positif)"
+// @Param request body user.UpdateUserByIdReq true "User ID (angka positif)"
 // @Success 200 {object} entity.Response
 func (T *Controller) UpdateUserById(ctx *gin.Context) {
-	ds := datasource.NewDatasource(T.Config, T.DB)
-	var req datasource.UpdateUserByIdReq
-
-	err := ctx.ShouldBindJSON(&req)
-	if err != nil {
-		resp := entity.Response{
-			Msg: err.Error(),
-		}
-		ctx.AbortWithStatusJSON(http.StatusBadRequest, resp)
-		return
-	}
-
-	err = ds.UpdateUserById(&req)
-	if err != nil {
-		resp := entity.Response{
-			Msg: err.Error(),
-		}
-		ctx.AbortWithStatusJSON(http.StatusInternalServerError, resp)
-		return
-	}
-
-	resp := entity.Response{
-		Msg: "Sukses",
-	}
-
-	ctx.JSON(http.StatusOK, resp)
-	return
+	ctx.JSON(http.StatusOK, gin.H{
+		"msg": "in progress",
+	})
 }
