# app/entity/entity.go
@@ -1,18 +1,11 @@
 package entity
 
-import "github.com/yeyee2901/sqlx/app/datasource"
-
 type Response struct {
-	Msg string `json:"msg"`
+	Code string `json:"code"`
+	Msg  string `json:"msg"`
 }
 
-type GetUsersResp struct {
-	Total int               `json:"total"`
-	Users []datasource.User `json:"users"`
-}
-
-
-type CreateUserResp struct {
-	Id   int64  `json:"id"`
-	Name string `json:"name"`
+type ResponseWithHTTPStatus struct {
+	HttpStatus int      `json:"http_status"`
+	Details    Response `json:"details"`
 }
