# docs/swagger.yaml
@@ -1,37 +1,39 @@
 definitions:
-  datasource.CreateUserReq:
+  entity.Response:
+    properties:
+      code:
+        type: string
+      msg:
+        type: string
+    type: object
+  user.CreateUserReq:
     properties:
       name:
         type: string
     type: object
-  datasource.UpdateUserByIdReq:
+  user.GetUserResp:
+    properties:
+      total:
+        type: integer
+      users:
+        items:
+          $ref: '#/definitions/user.User'
+        type: array
+    type: object
+  user.UpdateUserByIdReq:
     properties:
       id:
         type: integer
       name:
         type: string
     type: object
-  datasource.User:
+  user.User:
     properties:
       created_at:
         type: string
       id:
         type: integer
       name:
-        type: string
-    type: object
-  entity.GetUsersResp:
-    properties:
-      total:
-        type: integer
-      users:
-        items:
-          $ref: '#/definitions/datasource.User'
-        type: array
-    type: object
-  entity.Response:
-    properties:
-      msg:
         type: string
     type: object
 info:
@@ -48,11 +50,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.GetUsersResp'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/entity.Response'
+            $ref: '#/definitions/user.GetUserResp'
       summary: mengambil data-data user
       tags:
       - User
@@ -63,7 +61,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/datasource.CreateUserReq'
+          $ref: '#/definitions/user.CreateUserReq'
       responses:
         "200":
           description: OK
@@ -79,7 +77,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/datasource.UpdateUserByIdReq'
+          $ref: '#/definitions/user.UpdateUserByIdReq'
       responses:
         "200":
           description: OK
